# arabic-extract

./: CHANGELOG.md  README.md  pyproject.toml
src/arabic_extract/: __init__.py  _image.py  _pdf.py  _pipeline.py
src/arabic_ocr/: __init__.py  _image.py  _pdf.py
tests/: test_ocr.py
